@@ -1,3 +1,7 @@
+Picture adder now only adds pictures that are not to big in resolution / size(bytes)
+Found bug in previwer on Windows and possibly on Linux: black background is not set
+Improved previewer: bigger and black background
+Fixed minor bug in resizer where the upper handler wouldn't follow the mousemovements correctly
 Resizer now uses handlers which can be dragged by the mouse to resize the picture
 Using JLabels to hold images instead of JButtons. This dramaticly improves drawing speeds in the UI and editors
 Fixed bug in Previewer where on some platforms (Windows and Linux) the picture would flicker all the time
